--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -207,6 +207,140 @@ jobs:
           path: main_frontend/concert1/coverage/
           retention-days: 7
 
+  test-frontend-e2e:
+    name: Frontend E2E Tests
+    runs-on: ubuntu-latest
+    needs: [build-backend, build-frontend, test-frontend-unit]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/release/'))
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: rootpass
+          MYSQL_DATABASE: concert_db
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+        ports:
+          - 3306:3306
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: main_frontend/concert1/package-lock.json
+
+      - name: Wait for MySQL
+        run: |
+          max_attempts=30
+          attempt=0
+          until mysqladmin ping -h 127.0.0.1 -u root -prootpass --silent; do
+            attempt=$((attempt+1))
+            if [ $attempt -ge $max_attempts ]; then
+              echo "MySQL failed to start"
+              exit 1
+            fi
+            echo "Waiting for MySQL... ($attempt/$max_attempts)"
+            sleep 2
+          done
+          echo "✅ MySQL is ready!"
+
+      - name: Start backend server
+        run: |
+          cd main_backend
+          mvn spring-boot:run -Dspring-boot.run.profiles=test &
+          BACKEND_PID=$!
+          echo "BACKEND_PID=$BACKEND_PID" >> $GITHUB_ENV
+          echo "Backend started with PID: $BACKEND_PID"
+        env:
+          SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3306/concert_db
+          SPRING_DATASOURCE_USERNAME: root
+          SPRING_DATASOURCE_PASSWORD: rootpass
+
+      - name: Wait for backend to be ready
+        run: |
+          max_attempts=30
+          attempt=0
+          until curl -f http://localhost:8080/api/auth/test || [ $attempt -ge $max_attempts ]; do
+            attempt=$((attempt+1))
+            echo "Waiting for backend... ($attempt/$max_attempts)"
+            sleep 3
+          done
+          if [ $attempt -ge $max_attempts ]; then
+            echo "❌ Backend failed to start"
+            exit 1
+          fi
+          echo "✅ Backend is ready!"
+
+      - name: Install frontend dependencies
+        run: |
+          cd main_frontend/concert1
+          npm ci --legacy-peer-deps
+
+      - name: Start frontend dev server
+        run: |
+          cd main_frontend/concert1
+          npm run dev &
+          FRONTEND_PID=$!
+          echo "FRONTEND_PID=$FRONTEND_PID" >> $GITHUB_ENV
+          echo "Frontend started with PID: $FRONTEND_PID"
+        env:
+          NUXT_PUBLIC_API_BASE: http://localhost:8080
+
+      - name: Wait for frontend to be ready
+        run: |
+          max_attempts=30
+          attempt=0
+          until curl -f http://localhost:3000 || [ $attempt -ge $max_attempts ]; do
+            attempt=$((attempt+1))
+            echo "Waiting for frontend... ($attempt/$max_attempts)"
+            sleep 3
+          done
+          if [ $attempt -ge $max_attempts ]; then
+            echo "❌ Frontend failed to start"
+            exit 1
+          fi
+          echo "✅ Frontend is ready!"
+
+      - name: Run E2E tests
+        run: |
+          cd main_frontend/concert1
+          npm run test:e2e
+        env:
+          NUXT_PUBLIC_API_BASE: http://localhost:8080
+
+      - name: Upload E2E test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-test-results
+          path: main_frontend/concert1/coverage/
+          retention-days: 7
+
+      - name: Cleanup servers
+        if: always()
+        run: |
+          if [ ! -z "$BACKEND_PID" ]; then
+            kill $BACKEND_PID || true
+          fi
+          if [ ! -z "$FRONTEND_PID" ]; then
+            kill $FRONTEND_PID || true
+          fi
+
   # ============================================
   # STAGE 4: INTEGRATION TESTS (Optional)
   # ============================================
@@ -468,7 +602,7 @@ jobs:
   # ============================================
   pipeline-summary:
     name: Pipeline Summary
-    needs: [build-backend, build-frontend, test-backend-unit, test-frontend-unit, code-quality]
+    needs: [build-backend, build-frontend, test-backend-unit, test-frontend-unit, test-frontend-e2e, code-quality]
     runs-on: ubuntu-latest
     if: always()
     steps:
@@ -483,6 +617,7 @@ jobs:
           echo "## Test Results" >> $GITHUB_STEP_SUMMARY
           echo "- Backend Unit Tests: ${{ needs.test-backend-unit.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- Frontend Unit Tests: ${{ needs.test-frontend-unit.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Frontend E2E Tests: ${{ needs.test-frontend-e2e.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "## Quality & Security" >> $GITHUB_STEP_SUMMARY
           echo "- Code Quality: ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
@@ -491,11 +626,18 @@ jobs:
           echo "- Version: ${{ needs.build-backend.outputs.version }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          # Overall status
+          # Overall status (E2E tests are optional)
+          e2e_result="${{ needs.test-frontend-e2e.result }}"
+          e2e_passed=false
+          if [ "$e2e_result" == "success" ] || [ "$e2e_result" == "skipped" ]; then
+            e2e_passed=true
+          fi
+          
           if [ "${{ needs.build-backend.result }}" == "success" ] && \
              [ "${{ needs.build-frontend.result }}" == "success" ] && \
              [ "${{ needs.test-backend-unit.result }}" == "success" ] && \
              [ "${{ needs.test-frontend-unit.result }}" == "success" ] && \
+             [ "$e2e_passed" == "true" ] && \
              [ "${{ needs.code-quality.result }}" == "success" ]; then
             echo "## ✅ Pipeline Status: SUCCESS" >> $GITHUB_STEP_SUMMARY
             echo "All stages completed successfully!" >> $GITHUB_STEP_SUMMARY
