--- a/main_frontend/concert1/package.json
+++ b/main_frontend/concert1/package.json
@@ -12,7 +12,8 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "vitest run --config vitest.e2e.config.ts",
+    "test:e2e": "vitest run --config vitest.e2e.config.ts test/e2e/api-integration.e2e.test.ts",
+    "test:e2e:all": "vitest run --config vitest.e2e.config.ts",
     "test:e2e:watch": "vitest --config vitest.e2e.config.ts",
     "cy:open": "cypress open",
     "test:cy": "cypress run --browser electron",
