--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -115,6 +115,16 @@ jobs:
     name: Backend Unit Tests
     runs-on: ubuntu-latest
     needs: build-backend
+    services:
+      redis:
+        image: redis:7.2
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+        ports:
+          - 6379:6379
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -132,6 +142,8 @@ jobs:
           mvn test jacoco:report -Dspring.profiles.active=test
         env:
           SPRING_PROFILES_ACTIVE: test
+          SPRING_DATA_REDIS_HOST: localhost
+          SPRING_DATA_REDIS_PORT: 6379
 
       - name: Generate test report
         if: always()
@@ -224,6 +236,15 @@ jobs:
           --health-retries=5
         ports:
           - 3306:3306
+      redis:
+        image: redis:7.2
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+        ports:
+          - 6379:6379
 
     steps:
       - name: Checkout code
@@ -293,6 +314,8 @@ jobs:
           SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
           SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.MySQLDialect
           SPRING_JPA_HIBERNATE_DDL_AUTO: update
+          SPRING_DATA_REDIS_HOST: localhost
+          SPRING_DATA_REDIS_PORT: 6379
 
       - name: Wait for backend to be ready
         run: |
@@ -455,6 +478,15 @@ jobs:
           --health-retries=5
         ports:
           - 3306:3306
+      redis:
+        image: redis:7.2
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+        ports:
+          - 6379:6379
 
     steps:
       - name: Checkout code
@@ -492,6 +524,8 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: rootpass
           SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
           SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.MySQLDialect
+          SPRING_DATA_REDIS_HOST: localhost
+          SPRING_DATA_REDIS_PORT: 6379
 
   # ============================================
   # STAGE 5: CODE QUALITY & SECURITY
